--- a/.github/workflows/docker-build-push-backend-container-on-tag.yml
+++ b/.github/workflows/docker-build-push-backend-container-on-tag.yml
@@ -10,11 +10,6 @@ env:
 
 jobs:
   build-and-push:
-    # for EE, run on special image-builders runners
-    # TODO: make this a matrix build like the web containers
-    runs-on: 
-      group: amd64-image-builders
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -22,11 +17,11 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
+#     - name: Login to Docker Hub
+#       uses: docker/login-action@v3
+#       with:
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Backend Image Docker Build and Push
       uses: docker/build-push-action@v5
@@ -34,7 +29,7 @@ jobs:
         context: ./backend
         file: ./backend/Dockerfile
         platforms: linux/amd64,linux/arm64
-        push: true
+        push: false
         tags: |
           ${{ env.REGISTRY_IMAGE }}:${{ github.ref_name }}
           ${{ env.REGISTRY_IMAGE }}:latest
