--- a/.github/workflows/docker-build-push-model-server-container-on-tag.yml
+++ b/.github/workflows/docker-build-push-model-server-container-on-tag.yml
@@ -16,11 +16,11 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
+#     - name: Login to Docker Hub
+#       uses: docker/login-action@v3
+#       with:
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Model Server Image Docker Build and Push
       uses: docker/build-push-action@v5
@@ -28,7 +28,7 @@ jobs:
         context: ./backend
         file: ./backend/Dockerfile.model_server
         platforms: linux/amd64,linux/arm64
-        push: true
+        push: false
         tags: |
           danswer/danswer-model-server:${{ github.ref_name }}
           danswer/danswer-model-server:latest
