--- a/.github/workflows/docker-build-push-backend-container-on-tag.yml
+++ b/.github/workflows/docker-build-push-backend-container-on-tag.yml
@@ -37,10 +37,10 @@ jobs:
         build-args: |
           DANSWER_VERSION=${{ github.ref_name }}
 
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      with:
-        # To run locally: trivy image --severity HIGH,CRITICAL danswer/danswer-backend
-        image-ref: docker.io/${{ env.REGISTRY_IMAGE }}:${{ github.ref_name }}
-        severity: 'CRITICAL,HIGH'
-        trivyignores: ./backend/.trivyignore
+#     - name: Run Trivy vulnerability scanner
+#       uses: aquasecurity/trivy-action@master
+#       with:
+#         # To run locally: trivy image --severity HIGH,CRITICAL danswer/danswer-backend
+#         image-ref: docker.io/${{ env.REGISTRY_IMAGE }}:${{ github.ref_name }}
+#         severity: 'CRITICAL,HIGH'
+#         trivyignores: ./backend/.trivyignore
