--- a/.github/workflows/docker-build-backend-container-on-merge-group.yml
+++ b/.github/workflows/docker-build-backend-container-on-merge-group.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Backend Image Docker Build and Push
+    - name: Backend Image Docker Build
       uses: docker/build-push-action@v5
       with:
         context: ./backend
