hardcode version since the docker image build is strictly for seeing if the build works

--- a/.github/workflows/docker-build-web-container-on-merge-group.yml
+++ b/.github/workflows/docker-build-web-container-on-merge-group.yml
@@ -34,7 +34,6 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           tags: |
-            type=raw,value=${{ env.REGISTRY_IMAGE }}:${{ github.ref_name }}
             type=raw,value=${{ env.REGISTRY_IMAGE }}:latest
       
       - name: Set up Docker Buildx
@@ -55,7 +54,7 @@ jobs:
           platforms: ${{ matrix.platform }}
           push: false
           build-args: |
-            DANSWER_VERSION=${{ github.ref_name }}
+            DANSWER_VERSION=v0.0.1
           # needed due to weird interactions with the builds for different platforms  
           no-cache: true
           labels: ${{ steps.meta.outputs.labels }}
