--- a/.github/workflows/docker-build-backend-container-on-merge-group.yml
+++ b/.github/workflows/docker-build-backend-container-on-merge-group.yml
@@ -27,7 +27,6 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: false
         tags: |
-          ${{ env.REGISTRY_IMAGE }}:${{ github.ref_name }}
           ${{ env.REGISTRY_IMAGE }}:latest
         build-args: |
-          DANSWER_VERSION=${{ github.ref_name }}
+          DANSWER_VERSION=v0.0.1
